--- a/gb/22/12/9/n13881447.md
+++ b/gb/22/12/9/n13881447.md
@@ -1,63 +1,52 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>组图：珍珠港事件81周年 纽约举行纪念活动</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881448-GettyImages-1447453894-600x400.jpg" />
 <h6>2022年12月7日，美国纽约市无畏号航空母舰（Intrepid Aircraft Carrier）博物馆，二战退伍军人弗兰克?富莫（Frank Fumo，中）与在珍珠港（Pearl Harbor）事件中幸存下来的当地退伍军人的家人一起参加珍珠港袭击事件81周年纪念活动。(Spencer Platt/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2022年12月09日讯】（大纪元记者林紫蓉报导）今年是美国夏威夷珍珠港（Pearl Harbor）遇击事件81周年。12月7日，美国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6%E5%B8%82.md#1">纽约市</a>的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%97%A0%E7%95%8F%E5%8F%B7.md#1">无畏号</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%AA%E7%A9%BA%E6%AF%8D%E8%88%B0.md#1">航空母舰</a>（Intrepid Aircraft Carrier）博物馆举行了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BA%AA%E5%BF%B5.md#1">纪念</a>活动。</p>
+	<p>【大纪元2022年12月09日讯】（大纪元记者林紫蓉报导）今年是美国夏威夷珍珠港（Pearl Harbor）遇击事件81周年。12月7日，美国纽约市的无畏号航空母舰（Intrepid Aircraft Carrier）博物馆举行了纪念活动。</p>
 <p>1941年12月7日，日军袭击珍珠港，造成2,403名美国人丧生，另有1,178人受伤，该事件导致美国正式加入第二次世界大战。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%97%A0%E7%95%8F%E5%8F%B7.md#1">无畏号</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%AA%E7%A9%BA%E6%AF%8D%E8%88%B0.md#1">航空母舰</a>曾于1943年服役，并参加了太平洋战区的几次战役。1947年3月22日暂时退役，于1952年2月9日再度服役，在1954年6月18日第三次服役后，最终于1974年3月15日退役，1982年8月改造成博物馆，并对外开放。</p>
-<p>12月7日，二战退伍军人弗兰克?富莫（Frank Fumo）与在珍珠港袭击事件中幸存下来的当地退伍军人的家人一起出席了这场<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BA%AA%E5%BF%B5.md#1">纪念</a>仪式。参与者除了在船舰内参加纪念仪式外，有些幸存者的家属在甲板上合影留念，并将花圈抛向哈德逊河（Hudson River）。</p>
-<figure id="attachment_13881450" aria-describedby="caption-attachment-13881450" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13881450-GettyImages-1447456420.jpg"><img class="size-large wp-image-13881450" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881450-GettyImages-1447456420-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13881450" class="wp-caption-text">2022年12月7日，美国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6%E5%B8%82.md#1">纽约市</a>无畏号航空母舰（Intrepid Aircraft Carrier）博物馆，二战退伍军人弗兰克?富莫（Frank Fumo，中）与在珍珠港（Pearl Harbor）事件中幸存下来的当地退伍军人的家人一起参加珍珠港袭击事件81周年纪念活动。(Spencer Platt/Getty Images)</figcaption></figure>
-<figure id="attachment_13881451" aria-describedby="caption-attachment-13881451" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13881451-GettyImages-1447456440.jpg"><img class="size-large wp-image-13881451" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881451-GettyImages-1447456440-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13881451" class="wp-caption-text">2022年12月7日，美国纽约市无畏号航空母舰（Intrepid Aircraft Carrier）博物馆，二战退伍军人弗兰克?富莫（Frank Fumo，中）与在珍珠港（Pearl Harbor）事件中幸存下来的当地退伍军人的家人一起参加珍珠港袭击事件81周年纪念活动。(Spencer Platt/Getty Images)</figcaption></figure>
-<figure id="attachment_13881452" aria-describedby="caption-attachment-13881452" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13881452-GettyImages-1447456531.jpg"><img class="size-large wp-image-13881452" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881452-GettyImages-1447456531-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13881452" class="wp-caption-text">2022年12月7日，美国纽约市无畏号航空母舰（Intrepid Aircraft Carrier）博物馆，前无畏号水手、当地珍珠港（Pearl Harbor）事件幸存者的家人和其他人一起参加珍珠港袭击事件81周年纪念活动。(Spencer Platt/Getty Images)</figcaption></figure>
-<figure id="attachment_13881455" aria-describedby="caption-attachment-13881455" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13881455-GettyImages-1447453861.jpg"><img class="size-large wp-image-13881455" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881455-GettyImages-1447453861-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13881455" class="wp-caption-text">2022年12月7日，美国纽约市无畏号航空母舰（Intrepid Aircraft Carrier）博物馆，二战退伍军人弗兰克?富莫（Frank Fumo，中）与在珍珠港（Pearl Harbor）事件中幸存下来的当地退伍军人的家人一起参加珍珠港袭击事件81周年纪念活动。(Spencer Platt/Getty Images)</figcaption></figure>
-<figure id="attachment_13881458" aria-describedby="caption-attachment-13881458" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13881458-GettyImages-1447455854.jpg"><img class="size-large wp-image-13881458" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881458-GettyImages-1447455854-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13881458" class="wp-caption-text">2022年12月7日，美国纽约市，在无畏号航空母舰（Intrepid Aircraft Carrier）博物馆举行的珍珠港（Pearl Harbor）袭击事件81周年纪念活动上，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%8F%8D%E7%8F%A0%E6%B8%AF%E4%BA%8B%E4%BB%B6.md#1">珍珠港事件</a>幸存者的家属合影留念，准备将一个花圈扔到哈德逊河（Hudson River）上。(Spencer Platt/Getty Images)</figcaption></figure>
-<figure id="attachment_13881457" aria-describedby="caption-attachment-13881457" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13881457-GettyImages-1447455597.jpg"><img class="size-large wp-image-13881457" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881457-GettyImages-1447455597-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13881457" class="wp-caption-text">2022年12月7日，美国纽约市，在无畏号航空母舰（Intrepid Aircraft Carrier）博物馆举行的珍珠港（Pearl Harbor）袭击事件81周年纪念活动上，两位<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%8F%8D%E7%8F%A0%E6%B8%AF%E4%BA%8B%E4%BB%B6.md#1">珍珠港事件</a>幸存者的家属合力将一个花圈扔到哈德逊河（Hudson River）上。(Spencer Platt/Getty Images)</figcaption></figure>
-<figure id="attachment_13881456" aria-describedby="caption-attachment-13881456" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13881456-GettyImages-1447454897.jpg"><img class="size-large wp-image-13881456" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881456-GettyImages-1447454897-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13881456" class="wp-caption-text">2022年12月7日，美国纽约市，在无畏号航空母舰（Intrepid Aircraft Carrier）博物馆举行的珍珠港（Pearl Harbor）袭击事件81周年纪念活动上，一个花圈被扔到哈德逊河（Hudson River）上。(Spencer Platt/Getty Images)</figcaption></figure>
+<p>无畏号航空母舰曾于1943年服役，并参加了太平洋战区的几次战役。1947年3月22日暂时退役，于1952年2月9日再度服役，在1954年6月18日第三次服役后，最终于1974年3月15日退役，1982年8月改造成博物馆，并对外开放。</p>
+<p>12月7日，二战退伍军人弗兰克?富莫（Frank Fumo）与在珍珠港袭击事件中幸存下来的当地退伍军人的家人一起出席了这场纪念仪式。参与者除了在船舰内参加纪念仪式外，有些幸存者的家属在甲板上合影留念，并将花圈抛向哈德逊河（Hudson River）。</p>
+<figure id="attachment_13881450" aria-describedby="caption-attachment-13881450" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13881450-GettyImages-1447456420.jpg"><img decoding="async" class="size-large wp-image-13881450" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881450-GettyImages-1447456420-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13881450" class="wp-caption-text">2022年12月7日，美国纽约市无畏号航空母舰（Intrepid Aircraft Carrier）博物馆，二战退伍军人弗兰克?富莫（Frank Fumo，中）与在珍珠港（Pearl Harbor）事件中幸存下来的当地退伍军人的家人一起参加珍珠港袭击事件81周年纪念活动。(Spencer Platt/Getty Images)</figcaption></figure>
+<figure id="attachment_13881451" aria-describedby="caption-attachment-13881451" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13881451-GettyImages-1447456440.jpg"><img decoding="async" class="size-large wp-image-13881451" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881451-GettyImages-1447456440-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13881451" class="wp-caption-text">2022年12月7日，美国纽约市无畏号航空母舰（Intrepid Aircraft Carrier）博物馆，二战退伍军人弗兰克?富莫（Frank Fumo，中）与在珍珠港（Pearl Harbor）事件中幸存下来的当地退伍军人的家人一起参加珍珠港袭击事件81周年纪念活动。(Spencer Platt/Getty Images)</figcaption></figure>
+<figure id="attachment_13881452" aria-describedby="caption-attachment-13881452" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13881452-GettyImages-1447456531.jpg"><img decoding="async" class="size-large wp-image-13881452" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881452-GettyImages-1447456531-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13881452" class="wp-caption-text">2022年12月7日，美国纽约市无畏号航空母舰（Intrepid Aircraft Carrier）博物馆，前无畏号水手、当地珍珠港（Pearl Harbor）事件幸存者的家人和其他人一起参加珍珠港袭击事件81周年纪念活动。(Spencer Platt/Getty Images)</figcaption></figure>
+<figure id="attachment_13881455" aria-describedby="caption-attachment-13881455" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13881455-GettyImages-1447453861.jpg"><img decoding="async" class="size-large wp-image-13881455" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881455-GettyImages-1447453861-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13881455" class="wp-caption-text">2022年12月7日，美国纽约市无畏号航空母舰（Intrepid Aircraft Carrier）博物馆，二战退伍军人弗兰克?富莫（Frank Fumo，中）与在珍珠港（Pearl Harbor）事件中幸存下来的当地退伍军人的家人一起参加珍珠港袭击事件81周年纪念活动。(Spencer Platt/Getty Images)</figcaption></figure>
+<figure id="attachment_13881458" aria-describedby="caption-attachment-13881458" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13881458-GettyImages-1447455854.jpg"><img decoding="async" class="size-large wp-image-13881458" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881458-GettyImages-1447455854-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13881458" class="wp-caption-text">2022年12月7日，美国纽约市，在无畏号航空母舰（Intrepid Aircraft Carrier）博物馆举行的珍珠港（Pearl Harbor）袭击事件81周年纪念活动上，珍珠港事件幸存者的家属合影留念，准备将一个花圈扔到哈德逊河（Hudson River）上。(Spencer Platt/Getty Images)</figcaption></figure>
+<figure id="attachment_13881457" aria-describedby="caption-attachment-13881457" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13881457-GettyImages-1447455597.jpg"><img decoding="async" class="size-large wp-image-13881457" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881457-GettyImages-1447455597-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13881457" class="wp-caption-text">2022年12月7日，美国纽约市，在无畏号航空母舰（Intrepid Aircraft Carrier）博物馆举行的珍珠港（Pearl Harbor）袭击事件81周年纪念活动上，两位珍珠港事件幸存者的家属合力将一个花圈扔到哈德逊河（Hudson River）上。(Spencer Platt/Getty Images)</figcaption></figure>
+<figure id="attachment_13881456" aria-describedby="caption-attachment-13881456" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13881456-GettyImages-1447454897.jpg"><img decoding="async" class="size-large wp-image-13881456" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881456-GettyImages-1447454897-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13881456" class="wp-caption-text">2022年12月7日，美国纽约市，在无畏号航空母舰（Intrepid Aircraft Carrier）博物馆举行的珍珠港（Pearl Harbor）袭击事件81周年纪念活动上，一个花圈被扔到哈德逊河（Hudson River）上。(Spencer Platt/Getty Images)</figcaption></figure>
 <p>责任编辑：李明#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/19/n12631543.md#1">【拍案惊奇】美军叫停拜登交接 数字珍珠港事件</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/12/8/n13423351.md#1">加州橙县监事会纪念珍珠港遇袭80周年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/12/8/n13423561.md#1">纽约纪念珍珠港事件80周年 幸存者忆当年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/7/n13880435.md#1">珍珠港事件81周年 文图拉海员遗体荣归故里</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/19/n12631543.md#1">【拍案惊奇】美军叫停拜登交接 数字珍珠港事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/12/8/n13423351.md#1">加州橙县监事会纪念珍珠港遇袭80周年</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/12/8/n13423561.md#1">纽约纪念珍珠港事件80周年 幸存者忆当年</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/7/n13880435.md#1">珍珠港事件81周年 文图拉海员遗体荣归故里</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/26/n10173051.md#1" target="_blank">艾以：音乐家陈歌辛的最后岁月</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/15/n11385671.md#1" target="_blank">嫁到韩国的中国媳妇：守住善就能走出困境</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/16/n10979189.md#1" target="_blank">共产暴政录：许世友文革中的暴行</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/11/14/n4573690.md#1" target="_blank">一位留美华裔女生绝处逢生的经历</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953285.md#1">独家：“神的指引” 中领馆员工成功出逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950568.md#1">明末改朝换代关帝君显灵  天命不可违人算不如天算</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13951097.md#1">【百年真相】30岁自尽 钢琴家顾圣婴悲歌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954628.md#1">【百年真相】晚年街头乞讨 大师叶企孙往事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13952758.md#1">【未解之谜】别找了 外星人早来地球了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957046.md#1">【神韵早期节目】儒生抒怀（2015年制作）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957008.md#1">【新唐人大视野】经济数据公布 习替李强解围？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956635.md#1">【时事军事】这仗没法打了 俄乌伤亡10：1</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13956211.md#1">习近平临走时对普京说了句啥？媒体人解读</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955727.md#1">习近平访俄有异常细节 专家：普京话中有话</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955924.md#1">“新冠没有消失” 张文宏谈下一轮疫情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955715.md#1">艾成离世7个月 40岁胞弟艾翔心肌梗塞离世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955990.md#1">刘真离世三周年 辛龙发41秒片再度缅怀亡妻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/21/n13955475.md#1">消失一年半 赵薇被拍到手持身份证现身机场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/21/n13954943.md#1">与陈亚兰合作新戏 检场挑战“没台词”角色</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954710.md#1">孙红雷首次被女儿夸帅 逗趣反应笑翻网友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13948030.md#1">为何每天喝3杯这种茶 可以逆转衰老3年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954459.md#1">樱桃抗癌减肥、治痛风  但吃时要注意1件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954551.md#1">全方位保持卧室干净舒适的清洁技巧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955685.md#1">晒太阳更致癌还是更抗癌？这样晒太阳才安全</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/2/n13941432.md#1">适合女性的“168间歇性断食” 6周可见效</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/9/n13881447.htm">组图：珍珠港事件81周年 纽约举行纪念活动</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/12/9/n13881447.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386541.md#1">格鲁吉亚发现神秘石板 或蕴含失落语言</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387166.md#1">美国护士称见到2米高的死神逼近临终病人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387684.md#1">【未解之谜】孙中山转世？河南奇人张四目之谜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/13/n13642953.md#1">叹武训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386112.md#1">【未解之谜】用DNA谱曲？遗传学中隐藏生命密码</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389283.md#1">【军事情报局】阿萨德十天倒台 以军攻入叙利亚</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390708.md#1">【新闻大破解】美军反制 共军围岛不敢说演习</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390112.md#1">【时事金扫描】以乌首次联合战役 俄要报复</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389267.md#1">传中共拟允许人民币大幅贬值 专家析利弊</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389628.md#1">海关署长俞建华猝死 其靠山被指是丁薛祥</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389618.md#1">【内幕】惧美国制裁 中共跨国镇压密令曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389328.md#1">孙俪自曝13岁儿子用身体帮她挡车 网友大赞</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389389.md#1">高圆圆素颜带娃外出骑车 一细节获赞温馨有爱</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388478.md#1">泰勒丝“时代”巡演落幕 工作人员奖金惊人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14388542.md#1">《鱿鱼游戏2》破例 未播入围金球奖最佳剧集</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14390043.md#1">开跑车随手丢烟头 《庆余年》主演张若昀惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/4/n14383980.md#1">吃米饭同样可控糖  比生酮饮食更永续更安全</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389408.md#1">为什么不该用微波炉泡茶？ 泡好茶三技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389513.md#1">开卷真的有益 擅长阅读者大脑结构不同</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389057.md#1">用荷兰锅煮饭 停电也不担心 一锅到底营养更全面</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14387834.md#1">阑尾炎 便秘 腹泻？中医2招应对肚子痛</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/9/n13881447.htm">组图：珍珠港事件81周年 纽约举行纪念活动</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/12/9/n13881447.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
